# SARFloodAnalysis

./: .dockerignore  .flake8  .gitignore  CLAUDE_CODE_HANDOFF_FLOOD.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
emilia_romagna/: .gitignore  README.md  pyproject.toml
emilia_romagna/config/: pipeline_config.yaml
emilia_romagna/data/validation/: validation_summary.json
emilia_romagna/scripts/: check_scenes.py  download_jrc.py  make_figures.py  run_analysis.py  run_processing.py
emilia_romagna/src/pipeline/: change.py  terrain.py  validate.py
emilia_romagna/tests/unit/: test_composite.py  test_validation.py
jacobabad/: README.md  pyproject.toml
jacobabad/config/: pipeline_config.yaml
jacobabad/scripts/: check_scenes.py  download_jrc.py  make_figures.py  prepare_terrain.py  run_analysis.py
jacobabad/src/pipeline/: change.py  download.py  process.py  terrain.py  validate.py
jacobabad/src/utils/: config.py
jacobabad/tests/unit/: test_change_detection.py
scripts/: sync_to_s3.py
wroclaw/: README.md  pyproject.toml
wroclaw/config/: pipeline_config.yaml
wroclaw/data/validation/: validation_summary.json
wroclaw/scripts/: check_scenes.py  download_jrc.py  make_figures.py  run_analysis.py
wroclaw/src/pipeline/: change.py  composite.py  download.py  process.py  validate.py
wroclaw/tests/unit/: test_change_detection.py
