[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sarflood-emilia-romagna"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "rasterio>=1.3",
    "geopandas>=0.13",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "shapely>=2.0",
    "pyproj>=3.5",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
